--- a/404.html
+++ b/404.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html class="no-js" lang="es">
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#1b1b1b">
 	<title>404 Page not found | Videos de performances de live coding</title>
 	<script>(function(d,e){d[e]=d[e].replace("no-js","js");})(document.documentElement,"className");</script>
 	<meta name="description" content="">
-		<meta property="og:url" content="https://tusitio.com/404.html">
+		<meta property="og:url" content="http://localhost:1313/404.html">
   <meta property="og:site_name" content="Videos de performances de live coding">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="Un blog de videos de improvisaciones de live coding musical con diferentes lenguajes">
   <meta property="og:locale" content="es">
   <meta property="og:type" content="website">
-    <meta property="og:image" content="https://tusitio.com/images/banner.jpg">
+    <meta property="og:image" content="http://localhost:1313/images/banner.jpg">
 
 		
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="https://tusitio.com/images/banner.jpg">
+  <meta name="twitter:image" content="http://localhost:1313/images/banner.jpg">
   <meta name="twitter:title" content="404 Page not found">
   <meta name="twitter:description" content="Un blog de videos de improvisaciones de live coding musical con diferentes lenguajes">
 
