--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <h4 id="dj_dave---easy-live-coded-for-oatly">DJ_Dave - Easy Live Coded for Oatly</h4>
 <p><a href="https://www.youtube.com/watch?v=YvsoWehBbec">Enlace al vídeo</a></p>
 <video width="800" height="450" controls>
-  <source src="/videos/VideoSonicPi2.mp4" type="video/mp4">
+  <source src="https://www.youtube.com/watch?v=YvsoWehBbec" type="video/mp4">
   Tu navegador no soporta el video.
 </video>
 <h3 id="sonic-pi---live-coding-jungle">Sonic Pi - live coding jungle</h3>
